# devin-godseye

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  database.py  devin_client.py  github_client.py  main.py  models.py  poller.py  scanner.py  schemas.py  services.py  webhook.py
app/templates/: dashboard.html
tests/: conftest.py  fakes.py  test_api.py  test_scanner.py  test_services.py  test_webhook.py
